# AI_assistant

./: .gitignore  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  rmc.sh
alembic/: env.py
client/: Dockerfile  README.md  pyproject.toml  requirements.txt  runclient.cmd  streamlit.py
client/.streamlit/: config.toml  secrets.toml
client/images/: Movavi Screen Recorder v22.5.1 [2022, En Rus] portable (TA-2212) [rutracker-6156837].torrent
client/src/: About.py  app.py
client/src/components/: About.py  sidebar.py  signin.py  signup.py
client/src/config/: settings.py
client/src/pages/: 1_🗝️_Sign_In.py  2_✏️_Sign_Up.py  3_💬_Chat.py  4_❌_Log_Out.py
server/: .env  .gitignore  AI_tables.db  Dockerfile  README.md  alembic.ini  alembicinit.cmd  clearbase.cmd  db.sqlite3  pyproject.toml  runserver.cmd
server/alembic/: env.py
server/alembic/versions/: 08a5f4df0a98_create_tables.py  096e38d1f8a9_create_tables.py  0ae5548cbb58_create_tables.py  0e6d2e53e3dc_qa.py  100fff86efec_bla.py  1199d0c4140d_create_tables.py  1d21e430472f_create_tables.py  1ffa99a201ce_create_tables.py  2901e0ddd5b0_create_tables.py  35230c4451ad_init.py  3c23743734b0_init.py  3d431f669366_create_tables.py  4ffd90dd3312_create_tables.py  53e7fca865b0_create_tables.py  5450435feb71_create_tables.py  5c28a495246c_create_tables.py  79c11d36550d_create_tables.py  7b885225b64c_create_tables.py  80b7d2ed3e5f_create_tables.py  9dd19732d8a2_2.py  a33a973e3298_create_tables.py  aafe1cceebdb_first.py  ab8fbaaf4ba9_create_tables.py  d1fd78c78047_create_tables.py  d2efd8bdb0a8_create_tables.py  e1eb5dd8616d_create_tables.py  e894b1c971b1_create_tables.py  e9f72cfcfc2d_create_tables.py  ed9e8283417f_create_tables.py
server/src/: main.py
server/src/config/: llm_list.py  settings.py
server/src/database/: config.py  db_helper.py  models.py
server/src/repository/: chat.py  extract_text_from_pdf.py  extractors.py  history.py  hystory.py  llm_selector.py  user_cleanup.py  users.py
server/src/routes/: auth.py  chat.py  get_history.py  get_users.py  llm_selector.py  upload.py  upload_pdf.py  uploader.py
server/src/schemas/: auth.py  chat.py  get_user.py  upload.py  upload_pdf.py  users.py
server/src/services/: auth.py  client_api.py  extract_text_from_pdf.py  llm.py  llm_vector_db.py  llmchain.py  output.txt  pdf_extractor.py
server/src/services/chroma_db/: chroma.sqlite3
server/src/utils/: extract_text_from_pdf.py
server/src/vector_db/: chroma_init.py
server/uploads/: filename  test.docx  test.txt
src/: main.py
(+6 files in other folders)
