[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "AI assistant for explaining the text of the articles"
authors = ["sergiokapone <sergiy.ponomarenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.105.0"}
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
pydantic = "2.5.3"
aiosqlite = "^0.19.0"
alembic = "^1.13.1"
langchain = "^0.0.352"
huggingface-hub = "^0.20.1"
uvicorn = "^0.25.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
pypdf2 = "^3.0.1"
chromadb = "^0.4.21"
sentence-transformers = "^2.2.2"
python-docx = "^1.1.0"
google-api-python-client = "^2.112.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
youtube-transcript-api = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
